--- a/templates/home.html
+++ b/templates/home.html
@@ -3,49 +3,44 @@
 {% load static %}
 
 {% block main %}
-    <div class="container content">
-        <h1>Third-party authentication demo</h1>
-        <p>
-            <ul>
-                {% if user and not user.is_anonymous %}
-                    <li>
-                        <a>Hello {{ user.get_full_name|default:user.username }}!</a>
-                    </li>
-                    <li>
-                        <a href="{% url 'auth:logout' %}?next={{ request.path }}">Logout</a>
-                    </li>
-                    <li>
-                        <div ng-controller="gmailCtrl">
-                            <p>The ID is {% templatetag openvariable %} res {% templatetag closevariable %}</p>
-                        </div>
-
-                    </li>
-                {% else %}
-                    <li>
-                        <a href="{% url 'social:begin' 'facebook' %}?next={{ request.path }}">Login with Facebook</a>
-                    </li>
-                    <li>
-                        <a href="{% url 'social:begin' 'google-oauth2' %}?next={{ request.path }}">Login with Google</a>
-                    </li>
-                    <li>
-                        <a href="{% url 'social:begin' 'twitter' %}?next={{ request.path }}">Login with Twitter</a>
-                    </li>
-                {% endif %}
-    </ul>
-    </p>
-
-    <div class="container content">
-        <div ng-controller="helloCtrl">
-            <p>The ID is {% templatetag openvariable %} greeting.id {% templatetag closevariable %}</p>
-            <p>The content is {% templatetag openvariable %} greeting.content {% templatetag closevariable %}</p>
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">
+                    <img alt="Brand" src="{% static 'img/logo-40x40.png' %}">
+                </a>
+            </div>
         </div>
-    </div>
+    </nav>
 
     <div class="container content">
-        <input type="text" ng-model="yourName" placeholder="Enter a name here">
-        <hr>
-        <h1>Hello {% templatetag openvariable %} yourName {% templatetag closevariable %}!</h1>
-    </div>
+        <h1>Gwapit test application</h1>
+        <p>
+        <ul>
+            {% if user and not user.is_anonymous %}
+                <li>
+                    <h3>Hello {{ user.get_full_name|default:user.username }}!</h3>
+                </li>
+                <li>
+                    <a href="{% url 'auth:logout' %}?next={{ request.path }}">Logout</a>
+                </li>
+            {% else %}
+                <li>
+                    <a href="{% url 'social:begin' 'google-oauth2' %}?next={{ request.path }}">Login with Google
+                        <i class="fa fa-google-plus-square fa-2x" aria-hidden="true"></i>
+                    </a>
+                </li>
+            {% endif %}
+        </ul>
+        </p>
+
+        <div class="container content">
+            <div ng-controller="helloCtrl">
+                <h3>Spring.io test rest api</h3>
+                <p>The ID is {% templatetag openvariable %} greeting.id {% templatetag closevariable %}</p>
+                <p>The content is {% templatetag openvariable %} greeting.content {% templatetag closevariable %}</p>
+            </div>
+        </div>
 
     </div>
 {% endblock %}
