--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,6 +3,5 @@
     font-size: 18px;
     height: 55px;
     line-height: 20px;
-    padding: 5px;
-    padding-left: 5px;
+    padding: 5px 0 0 5px;
 }
