--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,7 @@
 
 
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
     <script type="text/javascript" src="{% static "js/angular.min.js" %}"></script>
     <script type="text/javascript" src="{% static "js/angular-sanitize.min.js" %}"></script>
